# rust-lambda

./: .gitignore  Cargo.toml  Makefile  README.md  invoke.http  template.yaml
src/: apigateway.rs  lib.rs  main.rs
