[package]
name = "rust-lambda"
version = "0.1.0"
authors = ["James Richardson <james+teal@time4tea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
lambda_runtime = "0.2.1"
serde = { version = "^1.0", features = ["derive"] }