[package]
name = "rust-lambda"
version = "0.1.0"
authors = ["James Richardson <email@example.com>"]
edition = "2018"

[lib]
name="lambda_utils"

[dependencies]
tokio = "0.1.22"
lambda_runtime = "0.2.1"
lambda_runtime_core = "0.1.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.64"
http = "0.2.2"
